<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_carrier_driver</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="apenumarti@ufl.edu">aditya</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-pyserial</exec_depend>
  <exec_depend>python3-crc</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
