<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_driver</name>
  <version>0.2.0</version>
  <description>This package runs the actuators on the vehicle. It uses the Pololu Micro Maestro servo controller to accomplish this.</description>
  <maintainer email="apenumarti@ufl.edu">aditya</maintainer>
  <license>MIT</license>

  <exec_depend>drive_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-pyserial</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
