<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neo6m_driver</name>
  <version>1.0.0</version>
  <description>A package that publishes data from the NEO-6M GPS module</description>
  <maintainer email="carl.crane@gmail.com">Carl Crane</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-adafruit-circuitpython-gps</exec_depend>
  <exec_depend>python3-pyserial</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
