<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neo6m_gps</name>
  <version>1.0.0</version>
  <description>A package that publishes data from the NEO-6M GPS module</description>
  <maintainer email="carl.crane@gmail.com">Carl Crane</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <run_depend>python3-adafruit-circuitpython-gps</run_depend>
   <run_depend>python3-utm</run_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
